# stat-ood

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml  sweep.yaml
configs/dataset/: base.yaml  massive_ko.yaml
configs/model/: base.yaml  e5.yaml
notebooks/: stat_ood_colab.ipynb  stat_ood_inference_viz.ipynb  stat_ood_step_by_step.ipynb  stat_ood_vscode_tunnel.ipynb
src/data/: loader.py
src/engine/: trainer.py
src/models/: wrapper.py
src/ood/: base.py  calculator.py  energy.py  mahalanobis.py
src/utils/: __init__.py  results.py
